force-app/main/default/objects/CBK_Resultado_Encuesta__c/CBK_Resultado_Encuesta__c.object-meta.xml
<CustomObject>
    <label>Resultado de encuesta</label>
    <nameField>
        <displayFormat>ENC-{0000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados de encuesta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>