force-app/main/default/objects/CBK_Resultado_Encuesta__c/fields/CBK_Case__c.field-meta.xml
<CustomField>
    <fullName>CBK_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Resultados de encuesta</relationshipLabel>
    <relationshipName>Resultados_de_encuesta</relationshipName>
    <type>Lookup</type>
</CustomField>