force-app/main/default/objects/CBK_Resultado_Encuesta__c/fields/CBK_Pregunta__c.field-meta.xml
<CustomField>
    <fullName>CBK_Pregunta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pregunta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>