force-app/main/default/objects/CBK_Resultado_Encuesta__c/fields/CBK_Tipo_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>CBK_Tipo_Encuesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Encuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>